--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,133 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="B_IBattle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sck-F8-EtA">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <connections>
+                                    <segue destination="Jd3-QK-c0l" kind="embed" id="Yi2-xB-BCw"/>
+                                </connections>
+                            </containerView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="6kd-qt-JQY">
+                                <rect key="frame" x="168" y="526" width="39" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </pageControl>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sck-F8-EtA" secondAttribute="trailing" id="7ZL-l9-sLy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sck-F8-EtA" secondAttribute="bottom" id="f4E-nK-lfI"/>
+                            <constraint firstItem="sck-F8-EtA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="h8f-uj-TK0"/>
+                            <constraint firstItem="sck-F8-EtA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ocS-AK-Daa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="pageControl" destination="6kd-qt-JQY" id="DSC-1b-obc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-28" y="103"/>
+        </scene>
+        <!--First Page View Controller-->
+        <scene sceneID="RdN-y8-SAz">
+            <objects>
+                <viewController storyboardIdentifier="FirstPageViewController" id="ahJ-Tz-oG2" customClass="FirstPageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="P9o-G5-9JY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intro1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2xP-n3-sxl">
+                                <rect key="frame" x="129" y="303.5" width="117" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2xP-n3-sxl" firstAttribute="centerX" secondItem="P9o-G5-9JY" secondAttribute="centerX" id="1IP-PR-xPL"/>
+                            <constraint firstItem="2xP-n3-sxl" firstAttribute="centerY" secondItem="P9o-G5-9JY" secondAttribute="centerY" id="hqT-dg-zCa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KsL-lO-Hu3"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ESH-Sq-dao" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1375" y="-361"/>
+        </scene>
+        <!--Second Page View Controller-->
+        <scene sceneID="c67-kJ-Tth">
+            <objects>
+                <viewController storyboardIdentifier="SecondPageViewController" id="zM3-l1-7wb" customClass="SecondPageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hMK-ED-qyY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intro2" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mvF-mD-0ZP">
+                                <rect key="frame" x="126" y="303.5" width="123" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mvF-mD-0ZP" firstAttribute="centerX" secondItem="hMK-ED-qyY" secondAttribute="centerX" id="Qv2-FQ-ieG"/>
+                            <constraint firstItem="mvF-mD-0ZP" firstAttribute="centerY" secondItem="hMK-ED-qyY" secondAttribute="centerY" id="YTr-IN-bag"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9Ol-XU-eli"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XPb-V2-C9N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1375" y="319"/>
+        </scene>
+        <!--Third Page View Controller-->
+        <scene sceneID="R5i-t9-gpV">
+            <objects>
+                <viewController storyboardIdentifier="ThirdPageViewController" id="ODv-Vp-5YZ" customClass="ThirdPageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0k7-ql-9fh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intro3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uul-2H-xDO">
+                                <rect key="frame" x="125" y="303.5" width="125" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="uul-2H-xDO" firstAttribute="centerY" secondItem="0k7-ql-9fh" secondAttribute="centerY" id="GKq-EZ-3Da"/>
+                            <constraint firstItem="uul-2H-xDO" firstAttribute="centerX" secondItem="0k7-ql-9fh" secondAttribute="centerX" id="rfl-3C-S6E"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7Oq-t6-t7q"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="avv-95-h1l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1374" y="996"/>
+        </scene>
+        <!--Page View Controller-->
+        <scene sceneID="eZE-rs-fqO">
+            <objects>
+                <viewController id="Jd3-QK-c0l" customClass="PageViewController" customModule="B_IBattle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G5O-II-xqs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kZ8-Sn-P8r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="689" y="94"/>
         </scene>
     </scenes>
 </document>
