--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
             </objects>
             <point key="canvasLocation" x="1375" y="319"/>
         </scene>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="nqb-Y6-iNW">
             <objects>
                 <viewController id="Haw-X4-Zf1" sceneMemberID="viewController">
@@ -122,10 +122,123 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ryc-7g-jLr"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="rbb-S2-arG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZY-Es-E4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2303" y="-12"/>
+            <point key="canvasLocation" x="3190" y="-388"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Nfq-eQ-bzl">
+            <objects>
+                <viewController id="sZI-ze-D7a" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dX7-h2-Nve">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DKu-5O-MUt">
+                                <rect key="frame" x="135" y="303.5" width="105" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="DKu-5O-MUt" firstAttribute="centerX" secondItem="dX7-h2-Nve" secondAttribute="centerX" id="NAV-Vp-Q1A"/>
+                            <constraint firstItem="DKu-5O-MUt" firstAttribute="centerY" secondItem="dX7-h2-Nve" secondAttribute="centerY" id="fD9-jH-4oE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KKd-aY-1pK"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="YmS-dA-bqw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VKj-zz-w6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3190" y="268"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="iHm-hu-484">
+            <objects>
+                <viewController id="DGo-jB-LLh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tFg-lp-Bvs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vm9-VI-s3G">
+                                <rect key="frame" x="134" y="303.5" width="107" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Vm9-VI-s3G" firstAttribute="centerY" secondItem="tFg-lp-Bvs" secondAttribute="centerY" id="GCH-Hi-9Py"/>
+                            <constraint firstItem="Vm9-VI-s3G" firstAttribute="centerX" secondItem="tFg-lp-Bvs" secondAttribute="centerX" id="jSG-rQ-Xxq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7Nm-Vz-ycl"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="qSe-CN-yNC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mhM-lM-3UP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3170" y="956"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Tdr-4R-F68">
+            <objects>
+                <viewController id="TQX-ix-9Dh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cPx-GQ-A23">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pcv-bm-fTm">
+                                <rect key="frame" x="134" y="303.5" width="107" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pcv-bm-fTm" firstAttribute="centerX" secondItem="cPx-GQ-A23" secondAttribute="centerX" id="Gxt-vX-slg"/>
+                            <constraint firstItem="pcv-bm-fTm" firstAttribute="centerY" secondItem="cPx-GQ-A23" secondAttribute="centerY" id="ZgK-8X-8tK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Z8S-Ck-JCg"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="WPu-zu-L15"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Quv-eE-nbb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3169" y="1672"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="iov-tY-UdF">
+            <objects>
+                <viewController id="tji-DC-e2H" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Oj-D6-YFt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZy-QF-wYF">
+                                <rect key="frame" x="134.5" y="303.5" width="106" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aZy-QF-wYF" firstAttribute="centerY" secondItem="0Oj-D6-YFt" secondAttribute="centerY" id="BCv-Zh-gQ5"/>
+                            <constraint firstItem="aZy-QF-wYF" firstAttribute="centerX" secondItem="0Oj-D6-YFt" secondAttribute="centerX" id="BLh-sL-imj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="D4j-0J-ci0"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="aSU-a5-OPr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VIz-5N-OrG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3190" y="2388"/>
         </scene>
         <!--Third Page View Controller-->
         <scene sceneID="R5i-t9-gpV">
@@ -149,7 +262,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <state key="normal" title="Enter"/>
                                 <connections>
-                                    <segue destination="Haw-X4-Zf1" kind="show" id="10V-PW-bF7"/>
+                                    <segue destination="Ls7-il-NXb" kind="show" id="10V-PW-bF7"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -182,6 +295,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kZ8-Sn-P8r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="689" y="94"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="dZd-u5-RW3">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ls7-il-NXb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9LK-9M-wdY">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Haw-X4-Zf1" kind="relationship" relationship="viewControllers" id="fWP-Qs-37F"/>
+                        <segue destination="sZI-ze-D7a" kind="relationship" relationship="viewControllers" id="dha-we-Ljv"/>
+                        <segue destination="DGo-jB-LLh" kind="relationship" relationship="viewControllers" id="aa7-BE-lkp"/>
+                        <segue destination="TQX-ix-9Dh" kind="relationship" relationship="viewControllers" id="ezr-4v-vyt"/>
+                        <segue destination="tji-DC-e2H" kind="relationship" relationship="viewControllers" id="Af4-xR-O2H"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WXz-uD-e6z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2301.5999999999999" y="-12.143928035982009"/>
         </scene>
     </scenes>
 </document>
