Add BaseTabBarCotroller defualt tab=2 (center tab).

--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
             </objects>
             <point key="canvasLocation" x="1375" y="319"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="nqb-Y6-iNW">
             <objects>
                 <viewController id="Haw-X4-Zf1" sceneMemberID="viewController">
@@ -134,13 +134,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ryc-7g-jLr"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="rbb-S2-arG"/>
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="rbb-S2-arG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZY-Es-E4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3190" y="-388"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="Nfq-eQ-bzl">
             <objects>
                 <viewController id="sZI-ze-D7a" sceneMemberID="viewController">
@@ -162,13 +162,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KKd-aY-1pK"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="YmS-dA-bqw"/>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="YmS-dA-bqw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VKj-zz-w6D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3190" y="268"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="iHm-hu-484">
             <objects>
                 <viewController id="DGo-jB-LLh" sceneMemberID="viewController">
@@ -190,13 +190,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7Nm-Vz-ycl"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="qSe-CN-yNC"/>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="qSe-CN-yNC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhM-lM-3UP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3170" y="956"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="Tdr-4R-F68">
             <objects>
                 <viewController id="TQX-ix-9Dh" sceneMemberID="viewController">
@@ -218,13 +218,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Z8S-Ck-JCg"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="WPu-zu-L15"/>
+                    <tabBarItem key="tabBarItem" systemItem="history" id="WPu-zu-L15"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Quv-eE-nbb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3169" y="1672"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="iov-tY-UdF">
             <objects>
                 <viewController id="tji-DC-e2H" sceneMemberID="viewController">
@@ -246,11 +246,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="D4j-0J-ci0"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="aSU-a5-OPr"/>
+                    <tabBarItem key="tabBarItem" systemItem="downloads" id="aSU-a5-OPr"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VIz-5N-OrG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3190" y="2388"/>
+            <point key="canvasLocation" x="3169" y="2434"/>
         </scene>
         <!--Forth Page View Controller-->
         <scene sceneID="R5i-t9-gpV">
@@ -334,16 +334,21 @@
             </objects>
             <point key="canvasLocation" x="689" y="94"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Base Tab Bar Controller-->
         <scene sceneID="dZd-u5-RW3">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ls7-il-NXb" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Ls7-il-NXb" customClass="BaseTabBarController" customModule="B_IBattle" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9LK-9M-wdY">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="defaultIndex">
+                            <integer key="value" value="2"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <segue destination="Haw-X4-Zf1" kind="relationship" relationship="viewControllers" id="fWP-Qs-37F"/>
                         <segue destination="sZI-ze-D7a" kind="relationship" relationship="viewControllers" id="dha-we-Ljv"/>
