--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -113,19 +113,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nS4-NM-Ewr">
-                                <rect key="frame" x="135.5" y="303.5" width="104" height="60"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tab1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nS4-NM-Ewr">
+                                <rect key="frame" x="138.5" y="303.5" width="98.5" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="242-d8-mOL">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="oL2-QN-6O9"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -182,11 +175,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U4A-o1-p6d">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="edU-5e-e33">
+                                        <barButtonItem key="rightBarButtonItem" title="Setting" id="dnl-fC-xTG"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="U4A-o1-p6d" firstAttribute="trailing" secondItem="7Nm-Vz-ycl" secondAttribute="trailing" id="CCA-Ui-AAe"/>
                             <constraint firstItem="Vm9-VI-s3G" firstAttribute="centerY" secondItem="tFg-lp-Bvs" secondAttribute="centerY" id="GCH-Hi-9Py"/>
+                            <constraint firstItem="U4A-o1-p6d" firstAttribute="leading" secondItem="7Nm-Vz-ycl" secondAttribute="leading" id="Xxo-TV-AiE"/>
                             <constraint firstItem="Vm9-VI-s3G" firstAttribute="centerX" secondItem="tFg-lp-Bvs" secondAttribute="centerX" id="jSG-rQ-Xxq"/>
+                            <constraint firstItem="U4A-o1-p6d" firstAttribute="top" secondItem="7Nm-Vz-ycl" secondAttribute="top" id="y9w-cj-IgT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7Nm-Vz-ycl"/>
                     </view>
